--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body {
+  margin: auto;
+  color: darkred;
+  font-weight: bolder;
+  height: 100vh;
+  background: #23074d;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #cc5333, #23074d);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: center;
+}
+
 h1, p {
   font-family: Lato;
 }
+
+img {height: 100px; width: auto;}
+
